--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-data/
-models/
-reports/
-
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -165,3 +160,7 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+/data
+/models
+/reports
