--- a/dvc.yaml
+++ b/dvc.yaml
@@ -42,3 +42,10 @@ stages:
     metrics:
     - reports/metrics.json
 
+metrics:
+- dvclive/metrics.json
+plots:
+- dvclive/plots/metrics:
+    x: step
+params:
+- dvclive/params.yaml
